# latentscore

./: .gitignore  AGENTS.md  CONTRIBUTE.md  DX_MAP.md  Makefile  README.md  environment.yml  examples.py  notes.md  pyproject.toml  pyrightconfig.json  rave_setup.py  repomix-output.xml  requirements.txt  session-ses_43c4.md
.codex/: setup.sh
.github/: pull_request_template.md
.github/workflows/: workflow.yml
assets/fonts/: press_start_2p.b64
common/: __init__.py  music_schema.py  prompt_registry.py  prompts.py  reward_config.py  training_config.py
data_work/: 01_download_base_data.py  02_process_base_data.py  02a_extract_vibes.py  02b_generate_configs.py  02c_score_configs.py  03_modal_train.py  04_clap_benchmark.py  05_export_models.py  06_eval_suite.py  07_human_eval_pack.py  07_modal_infer_eval.py  08_synth_sensitivity.py  09_field_usage.py  09_render_audio_from_results.py  10_export_embedding_map.py  11_sample_test_prompts.py  12_perf_benchmark.py  13_live_timing.py  14_export_clap_embedding_map.py  1_process_base_data.py  98_export_fireworks_jsonl.py  EXPERIMENTS.md  MASTERPLAN.md  METHODOLOGY.md  README.md  __02_process_base_data.py  __dead_code_do_not_use_for_anything_but_reference_02_process_base_data.py  __init__.py  _script_runner.py  audio_rewards.py  clap_benchmark.py  debug_vibe_noisy.py  download_base_data.py  environment.yml  export_models.py  generate_audio_from_configs.py  llm_cache.py  modal_train.py  process_base_data.py  requirements.txt  (+3 more)
data_work/.experiments/: run_experiments.py
data_work/.smoke/: grpo_smoke.jsonl  sft_smoke.jsonl
data_work/eval_sets/: README.md  short_prompts.jsonl  test_prompts.jsonl
data_work/lib/: __init__.py  audio_features.py  baselines.py  clap_scorer.py  config_batcher.py  config_io.py  dedupe.py  eval_schema.py  jsonl_io.py  llm_client.py  llm_scorer.py  music_prompt.py  music_schema.py  periodic_writer.py  pipeline_models.py  record_builder.py  resilience.py  rewards.py  scoring_types.py  vibe_schema.py
data_work/plots/: build_tikz.sh  export_dataset_csv.py  plot_all.py
docs/: CHANGELOG_TEMPLATE.md  DESIGN_DOC_TEMPLATE.md  README_TEMPLATE.md  ablation-guide.md  architecture.md  coding-guidelines.md  examples.md  latentscore-dx.md
docs/plans/: 2026-01-19-title-payload-design.md  2026-01-19-title-payload-implementation-plan.md
examples/: latentscore_api_smoke.py
latentscore/: README.md  __init__.py  audio.py  cli.py  config.py  demo.py  dx.py  errors.py  examples.py  for_llm.md  indicators.py  logging_utils.py  main.py  models.py  new.py  old.py  old_dx.py  old_dx_simpler.py  playback.py  prompt_examples.py  spinner.py  synth.py
latentscore/providers/: __init__.py  litellm.py
latentscore_old/: audio.py  cli.py  config.py  demo.py  errors.py  models.py  playback.py  prompt_examples.py
latentscore_old/providers/: litellm.py
notebooks/: quickstart.ipynb
scripts/: tail_logs.sh
skills/memory-use/: SKILL.md
skills/rtfm-mechanism/: SKILL.md
src/app/: __init__.py  __main__.py  app.py  branding.py  copy_hints.py  diagnostics_tui.py  download_soundfonts.py  llm_to_synth.py  logging_utils.py  loop.py  menubar.py  new_llm_to_synth.py  new_synth.py  new_vibe_templates.py  parent_watch.py  quit_signal.py  render_all_vibes.py  sf2_integration.py  sf2_synth.py  synth.py  synth_NEW_BACKUP.py  synth_NEW_BACKUP_REMOVE.py  textual_app.py  textual_app_runner.py  textual_serve_runner.py  tui.py  tui_base.py  webview_app.py
src/latentscore/: __init__.py  app.py  computation.py  diagnostics_tui.py  logging_utils.py  loop.py  menubar.py  textual_app.py  textual_app_runner.py  textual_serve_runner.py  webview_app.py
tests/: conftest.py  test_app.py  test_config_prompt_roles.py  test_diagnostics_tui.py  test_generate_result.py  test_init.py  test_latentscore_audio.py  test_latentscore_config.py  test_latentscore_dx.py  test_latentscore_library.py  test_latentscore_models.py  test_latentscore_prompt_schema.py  test_latentscore_schema_parity.py  test_latentscore_spinner.py  test_latentscore_streaming.py  test_latentscore_synth.py  test_latentscore_synth_config.py  test_litellm_adapter.py  test_logging_utils.py  test_menubar.py  test_mlx_prompt_roles.py  test_models_prompt.py  test_parent_watch.py  test_prompt_unification.py  test_quit_signal.py  test_textual_app.py  test_textual_runners.py  test_tui.py  test_webview_app.py
tests/data_work/: test_audio_features.py  test_clap_benchmark_roles.py  test_clap_scorer.py  test_config_batcher.py  test_dedupe.py  (+28 more)
(+12 files in other folders)
