[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentscore"
version = "0.1.0"
description = "LatentScore audio synthesis library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "sounddevice",
    "simpleaudio",
    "pydantic>=2",
    "rich",
    "sentence-transformers",
    "litellm>=1.0",
    "python-dotenv",
    "json-repair",
    "torch",
    "scikit-learn",
    "huggingface_hub>=0.20",
    
    # --- Apple Silicon (M1/M2/M3) Specifics ---
    "mlx>=0.22; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.22; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "llm-structured-output; sys_platform == 'darwin' and platform_machine == 'arm64'",

    # --- Outlines (Split Version) ---
    # Case A: Apple Silicon (Needs MLX extras)
    "outlines[mlxlm]; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Case B: Everyone Else (Standard version)
    "outlines; sys_platform != 'darwin' or platform_machine != 'arm64'",
]

[project.scripts]
latentscore = "latentscore.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["latentscore", "latentscore.*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto --maxfail=1 --cov=latentscore --cov=data_work --cov-report=term-missing"
testpaths = ["tests"]