[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentscore"
version = "0.1.3"
description = "Generate ambient music from text. Locally. No GPU required."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "sounddevice",
    "pydantic>=2",
    "rich",
    "sentence-transformers",
    "litellm>=1.0",
    "python-dotenv",
    "json-repair",
    "torch",
    "scikit-learn",
    "huggingface_hub>=0.20",
    "transformers>=4.57.0,<5",
    "tokenizers>=0.20.0",
    "sentencepiece",
]

[project.optional-dependencies]
# Local LLM inference (expressive mode) - CPU-only, uses huggingface transformers
expressive = [
    "outlines",
    "instructor",
    "bitsandbytes; sys_platform == 'linux'",
    "mlx; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "llama-cpp-python; platform_machine != 'arm64' and sys_platform != 'win32'",
]

[project.scripts]
latentscore = "latentscore.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["latentscore", "latentscore.*", "common", "common.*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto --maxfail=1 --cov=latentscore --cov=data_work --cov-report=term-missing"
testpaths = ["tests"]
